--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,5 +41,12 @@
     <welcome-file-list>
         <welcome-file></welcome-file>
     </welcome-file-list>
-
+    <filter>
+        <filter-name>cors</filter-name>
+        <filter-class>com.example.chat.filter.SimpleCORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>cors</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
